src/objects/REVVY__MnPriceListLine__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Adjustment</label>
        <referenceTo>Attribute_Adjustment__c</referenceTo>
        <relationshipLabel>Price List Lines</relationshipLabel>
        <relationshipName>Attribute_Adjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Discount</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Discount__c.Level_Applied__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Price List Lines</relationshipLabel>
        <relationshipName>Discount_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Warranty__c</fullName>
        <description>Equipment Warranty in Months</description>
        <label>Equipment Warranty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <label>Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <formula>AND(AND(today()  &gt;=  REVVY__Start_Date__c ,today() &lt;  REVVY__End_Date__c ), AND(today() &gt;=  REVVY__PriceList__r.REVVY__Start_Date__c , today() &lt; REVVY__PriceList__r.REVVY__End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_SKU_Id__c</fullName>
        <label>Local SKU Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowest_Level_Description__c</fullName>
        <label>Lowest Level Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lowest_Unit__c</fullName>
        <label>Lowest Unit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Attribute_Adjustment_Id__c</fullName>
        <formula>Attribute_Adjustment__r.Id</formula>
        <label>Attribute Adjustment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Country_Applicable__c</fullName>
        <formula>TEXT( REVVY__PriceList__r.Country_applicability__c )</formula>
        <label>Country Applicable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Product_Type__c</fullName>
        <description>to display in Pricelist lines</description>
        <formula>TEXT( REVVY__Product__r.Product_Type__c )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Volume_Discount_Id__c</fullName>
        <formula>CASESAFEID(Discount__r.Id)</formula>
        <label>OCD Volume Discount Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePlan_Family_Group__c</fullName>
        <label>PricePlan Family Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Floor__c</fullName>
        <label>Price Floor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Unit_of_Measure__c</fullName>
        <defaultValue>&quot;Price at Lowest Level&quot;</defaultValue>
        <label>Price Unit of Measure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories/Train/Serv./Misc.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry Reagents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoassay Reagents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__CostPrice__c</fullName>
        <description>Stores the cost of a product</description>
        <inlineHelpText>Stores the cost of a product</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__End_Date__c</fullName>
        <description>Date when this price list line expires.</description>
        <inlineHelpText>Date when this price list line expires.</inlineHelpText>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Price List Line ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__ListedPrice__c</fullName>
        <description>Price charged for the product.</description>
        <inlineHelpText>Price charged for the product.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__OverrideWarnings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that lets you override the warnings when the effective dates of a price list line item is out of sync with the effective dates of the price list.</description>
        <inlineHelpText>Checkbox that lets you override the warnings when the effective dates of a price list line item is out of sync with the effective dates of the price list.</inlineHelpText>
        <label>OverrideWarnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceListLineNum__c</fullName>
        <description>Internal field that is used to make a price list line ID.</description>
        <inlineHelpText>Internal field that is used to make a price list line ID.</inlineHelpText>
        <label>Price List Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceList__c</fullName>
        <description>Unique ID of the price list that this price list line belongs to.</description>
        <inlineHelpText>Unique ID of the price list that this price list line belongs to.</inlineHelpText>
        <label>Price List Name</label>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Price List Lines</relationshipLabel>
        <relationshipName>PriceListLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__Price_List_ID__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <formula>REVVY__PriceList__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Price List ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Price_List_Name__c</fullName>
        <description>Name of the price list.</description>
        <formula>REVVY__PriceList__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the price list.</inlineHelpText>
        <label>Price List Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__PricingTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID for the Pricing Tier that this price list line refers to.</description>
        <inlineHelpText>Unique ID for the Pricing Tier that this price list line refers to.</inlineHelpText>
        <label>Volume Pricing</label>
        <referenceTo>REVVY__MnTieredPricing__c</referenceTo>
        <relationshipLabel>Volume Pricing</relationshipLabel>
        <relationshipName>Tiered_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Product_Id__c</fullName>
        <description>Unique external ID of the product that this price list line refers to.</description>
        <formula>REVVY__Product__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique external ID of the product that this price list line refers to.</inlineHelpText>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Product_Name__c</fullName>
        <description>Name of the product.</description>
        <formula>REVVY__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the product.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique Salesforce ID for the product that this price list line refers to.</description>
        <inlineHelpText>Unique Salesforce ID for the product that this price list line refers to.</inlineHelpText>
        <label>Product Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.REVVY__AllowPricing__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Price List Lines</relationshipLabel>
        <relationshipName>Price_List_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__RecurringPrice__c</fullName>
        <description>How often the customer is charged for a product. Options are one-time, weekly, monthly, and yearly.</description>
        <formula>text(REVVY__Product__r.REVVY__Billing_Frequency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How often the customer is charged for a product. Options are one-time, weekly, monthly, and yearly.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__SourceQuoteItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Source quote item from which this contract price line was created.</description>
        <inlineHelpText>Source quote item from which this contract price line was created.</inlineHelpText>
        <label>Source Quote Item</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>Contract Price Lines</relationshipLabel>
        <relationshipName>ContractPriceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Start_Date__c</fullName>
        <description>Date when this price list line goes into effect.</description>
        <inlineHelpText>Date when this price list line goes into effect.</inlineHelpText>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__WarningCodes__c</fullName>
        <description>Comma-separated list of warning messages on this price list line.</description>
        <inlineHelpText>Comma-separated list of warning messages on this price list line.</inlineHelpText>
        <label>WarningCodes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Warnings__c</fullName>
        <description>Warning messages that appear when the price list line&apos;s effective dates are out of sync with the price list&apos;s effective dates.</description>
        <formula>if ( CONTAINS(REVVY__WarningCodes__c, &apos;DATES_OUTOF_SYNC&apos;), IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Warning&apos;,14,14) + &apos; Effective Dates are not in range specified at Header&apos;, if (CONTAINS(REVVY__WarningCodes__c,&apos;START_DATE_PRIOR_END_DATE&apos;), IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Warning&apos;,14,14) + &apos;Start Date Prior End Date&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Warning messages that appear when the price list line&apos;s effective dates are out of sync with the price list&apos;s effective dates.</inlineHelpText>
        <label>Warnings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Discount_Amount__c</fullName>
        <description>Multiple Year Discount (per year of contract)</description>
        <inlineHelpText>Multiple Year Discount (per year of contract)</inlineHelpText>
        <label>Service Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Discount_Max_Year__c</fullName>
        <description>Max No of years for discount (AB)</description>
        <inlineHelpText>Max No of years for discount (AB)</inlineHelpText>
        <label>Service Discount Max Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_per_Access_Price__c</fullName>
        <label>Tier 1 per Access Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In__c</fullName>
        <label>Trade-In</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Pricing_Overide__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This override the price and ignore the volume percentage discount.</description>
        <label>Volume Pricing Overide</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Price List Lines (Volume Pricing Overide)</relationshipLabel>
        <relationshipName>Price_List_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>